pma/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pma-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: pma
  template:
    metadata:
      labels:
        component: pma
    spec:
      containers:
      - name: pma
        image: phpmyadmin:5.2.1-apache
